# audiodecoder.fluidsynth

./: .gitignore  .travis.yml  CMakeLists.txt  FindFluidSynth.cmake  FindLibSndFile.cmake  Jenkinsfile  README.md  appveyor.yml
.github/workflows/: build.yml  sync-addon-metadata-translations.yml
audiodecoder.fluidsynth/: addon.xml  addon.xml.in
audiodecoder.fluidsynth/resources/: settings.xml  settings.xml.in
audiodecoder.fluidsynth/resources/language/resource.language.af_za/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.am_et/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.ast_es/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.az_az/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.be_by/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.ca_es/: strings.po
audiodecoder.fluidsynth/resources/language/resource.language.cs_cz/: strings.po
debian/: changelog  changelog.in  control  copyright  rules
depends/common/fluidsynth/: 0001-fix-install-path.patch  flags.txt  fluidsynth.sha256  fluidsynth.txt
depends/common/libsndfile/: 0001-allow-to-disable-documentation-install.patch  flags.txt  libsndfile.sha256  libsndfile.txt
src/: FluidDecoder.cpp  FluidDecoder.h
(+71 files in other folders)
